--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,17 +83,22 @@ header a:hover{
 /*Start of Hero*/
 .hero{
     background-image: url("../images/hero.jpg");
-    background-size: auto;
-    padding: 250px 40px 10px 0;
+    background-size: contain;
+    height: 250px;
     display: flex;
     justify-content: flex-end;
-    width: auto;
+    align-items: bottom;
+    position: relative;
 }
-
+.hero-text{
+    /* display: flex; */
+    position: absolute;
+    right: 0;
+    bottom: 20px;
+    align-self: bottom;
+}
 .hero h2{
-    display: flex;
     padding: 5px;
-
 }
 /*End of Hero*/
 
@@ -136,13 +141,13 @@ text-align: right;
 /*Start of Work Grid*/
 .container{
     margin-left: 20px;
-    width: 47%;
+    width: 100%;
 }
 
 .grid-container{
     display: grid;
-    grid-template-columns: repeat(3, 5fr);
-    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: repeat(3, 33%);
+    grid-template-rows: repeat(4, 1fr);
     grid-auto-flow: column;
     gap: 10px;
 }
@@ -187,22 +192,26 @@ text-align: right;
 /* ??????confusing fix??????*/
 .item-1{
     grid-column: 1 / span 2;
-    grid-row: 1 / span 30;
+    grid-row: 1 / span 2;
     background-image: url("../images/Run-Buddy.jpg");
 }
 
+.item-2{
+    background-image: url("../images/goals.jpg");
+}
+
 .item-3{
-    grid-row: span 15;
+    grid-row: span 1;
 }
 
 .item-5{
     grid-column: 2 / span 1;
-    grid-row: span 15;
+    grid-row: span 1;
 }
 
 .grid-item:nth-child(2n){
     grid-column: 3 / span 1;
-    grid-row: span 15;
+    grid-row: span 1;
 }
 /*End of Work Grid*/
 /*End of Work*/
@@ -246,9 +255,7 @@ text-align: right;
 @media screen and (max-width: 900px){
 
     /* Start of Hero */
-    .hero{
-        padding-top: 190px;
-    }
+  
     /* End of Hero */
     
     /* Start of Header */
@@ -281,13 +288,7 @@ text-align: right;
         margin-left: -4px;
     }
 
-    .container{
-        width: 100%;
-    }
 
-    .item-1{
-        grid-row: span 15;
-    }
  
     /* End of Work */
 
